toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__array_destructuring_with_default_values.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const [y = 200, z = 300] = [22];\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: y
      in_scope: false
      exposed: true
  - IdentifierReferredTo:
      name: z
      in_scope: false
      exposed: true
- - AssignmentFromStatement
