toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__basic_object_destructuring.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const { a, b } = { a: 1, b: 2 };\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: a
      in_scope: false
      exposed: true
  - IdentifierReferredTo:
      name: b
      in_scope: false
      exposed: true
- - AssignmentFromStatement
