toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__complex_nested_destructuring.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const { q: { r: [s, { t }] } } = { q: { r: [17, { t: 18 }] } };\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: s
      in_scope: false
      exposed: true
  - IdentifierReferredTo:
      name: t
      in_scope: false
      exposed: true
- - AssignmentFromStatement
