toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__destructuring_in_for_of_loops.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const items = [{ id: 1, name: 'Item 1' }, { id: 2, name: 'Item 2' }];\nfor (const { id, name } of items) {\n    console.log(`${id}: ${name}`);\n}\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: items
      in_scope: false
      exposed: true
- - AssignmentFromStatement
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: id
      in_scope: false
      exposed: false
  - IdentifierReferredTo:
      name: name
      in_scope: false
      exposed: false
- - IdentifierReferredTo:
      name: items
      in_scope: true
      exposed: false
  - InCallExpression
  - Attribute: log
  - IdentifierReferredTo:
      name: console
      in_scope: false
      exposed: false
  - IdentifierReferredTo:
      name: id
      in_scope: true
      exposed: false
  - IdentifierReferredTo:
      name: name
      in_scope: true
      exposed: false
