toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__destructuring_returned_arrays.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "function returnArray() {\n    return [1, 2, 3];\n}\nconst [first, ...restArray] = returnArray();\n"
---
- - InFunction:
      - returnArray
      - start: 1
        end: 49
  - FunctionArguments
- - InFunction:
      - returnArray
      - start: 1
        end: 49
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: first
      in_scope: false
      exposed: true
  - IdentifierReferredTo:
      name: restArray
      in_scope: false
      exposed: true
- - AssignmentFromStatement
  - InCallExpression
  - IdentifierReferredTo:
      name: returnArray
      in_scope: true
      exposed: true
- - AssignmentFromStatement
