toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__destructuring_with_computed_property_names.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const key = 'p';\nconst { [key]: value } = { p: 16 };\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: key
      in_scope: false
      exposed: true
- - AssignmentFromStatement
  - Constant: p
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: value
      in_scope: false
      exposed: true
- - AssignmentFromStatement
