toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__object_destructuring_with_renaming_and_default.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const { c: renamed, d = 'default' } = { c: 3 };\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: renamed
      in_scope: false
      exposed: true
  - IdentifierReferredTo:
      name: d
      in_scope: false
      exposed: true
  - Constant: default
- - AssignmentFromStatement
