toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__destructuring_tests__object_destructuring_with_rest_properties.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const { u, ...others } = { u: 19, v: 20, w: 21 };\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: u
      in_scope: false
      exposed: true
  - IdentifierReferredTo:
      name: others
      in_scope: false
      exposed: true
- - AssignmentFromStatement
